chore: Spotless checks with 4 spaces